@@ -1,3 +1,9 @@
+2012-03-30  Andreas Kupries  <andreask@activestate.com>
+
+	* ncgi.tcl: [Bug 3513149]: Removed superfluous closing
+	* pkgIndex.tcl: bracket. Bumped version to 1.3.3.
+	* ncgi.man:
+
 2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
